--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <!-- ========== HEADER ========== -->
 <header class="centered-navigation-v2 ">
- 
-	{% include navbar.html %}
+
+	{% include branding.html %}
 </header>
 
 <!-- ========== END HEADER ========== -->
