--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,15 +1,16 @@
 <div class="centered-navigation-wrapper">
-    <a href="/"><img src="/wp-content/themes/juxta/images/juxta_logo.jpg" class="mobile-logo" alt="Van Mander"></a>
-    <a href="javascript:void(0)" id="js-centered-navigation-mobile-menu" class="centered-navigation-mobile-menu"><i class="fa fa-bars" aria-hidden="true"></i>
- MENU</a>
-    <nav role="navigation">
-      <ul id="js-centered-navigation-menu" class="centered-navigation-menu">
-          <li class="nav-link logo">
-              <a href="/"><img src="/wp-content/themes/juxta/images/juxta_logo.jpg"  alt="Van Mander"></a>
-         </li>
-          
-      </ul>
+  <a href="/"><img src="/images/juxta_logo.png" class=" mobile-logo" alt="Van Mander"></a>
+  <a href="javascript:void(0)" id="js-centered-navigation-mobile-menu" class="centered-navigation-mobile-menu"><i
+      class="fa fa-bars" aria-hidden="true"></i>
+    MENU</a>
+  <nav role="navigation">
+    <ul id="js-centered-navigation-menu" class="centered-navigation-menu">
+      <li class="nav-link logo">
+        <a href="/"><img src="/images/juxta_logo.png" alt="Van Mander"></a>
+      </li>
 
-    </nav>
+    </ul>
 
-  </div>
+  </nav>
+
+</div>
