--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,49 +2,64 @@
 # this ensures Jekyll reads the file to be transformed into CSS later
 # only Main files contain this front matter, not partials.
 ---
- 
+
 @import "custom-variables";
 @import "bootstrap/scss/bootstrap";
 @import "site-branding";
 @import "nav";
-@import "nav-2";
+
 @import url("https://use.typekit.net/atp8oid.css");
-
-
 
 html {
   scroll-behavior: smooth;
 }
 
 body {
-    background: rgb(27,15,10);
-    background: -moz-linear-gradient(0deg, rgba(27,15,10,1) 0%, rgba(27,15,10,1) 86%, rgba(54,32,20,1) 92%);
-    background: -webkit-linear-gradient(0deg, rgba(27,15,10,1) 0%, rgba(27,15,10,1) 86%, rgba(54,32,20,1) 92%);
-    background: linear-gradient(0deg, rgba(27,15,10,1) 0%, rgba(27,15,10,1) 86%, rgba(54,32,20,1) 92%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#1b0f0a",endColorstr="#362014",GradientType=1);
-    color:#fff;
+  background: rgb(27, 15, 10);
+  background: -moz-linear-gradient(0deg, rgba(27, 15, 10, 1) 0%, rgba(27, 15, 10, 1) 86%, rgba(54, 32, 20, 1) 92%);
+  background: -webkit-linear-gradient(0deg, rgba(27, 15, 10, 1) 0%, rgba(27, 15, 10, 1) 86%, rgba(54, 32, 20, 1) 92%);
+  background: linear-gradient(0deg, rgba(27, 15, 10, 1) 0%, rgba(27, 15, 10, 1) 86%, rgba(54, 32, 20, 1) 92%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#1b0f0a",endColorstr="#362014",GradientType=1);
+  color: #fff;
 }
 
-p, a {color:#fff!important}
-p a {text-decoration: underline!important;
-    padding: 5px;
-    background-color:$dark!important;
+p,
+a {
+  color: #e5ddcf;
+  font: 12px/18px Verdana, Arial, Helvetica, sans-serif;
+  margin: 0 auto;
+
+  text-align: left;
+}
+p a,
+p a {
+  text-decoration: none !important;
+  background-color: $dark;
+  color: #ffffff;
+  margin: 0 auto;
+  text-align: left;
+  padding: 0.2em;
+  a img {
+    background-color: none !important;
+  }
+  padding: 3px;
+
+  &:hover {
+    color: orange;
+  }
 }
 
 .brand-content-right {
- float:left;
+  float: left;
   margin-top: 1.8em;
-  margin-left: .3em;
+  margin-left: 0.3em;
   margin-bottom: -5em;
   text-align: left;
   font-size: 2em;
-  
-  
-
 }
 
 .brand-content-left {
-  float:right;
+  float: right;
   margin-top: 1.8em;
   margin-bottom: -5em;
   text-align: right;
@@ -52,16 +67,13 @@ p a {text-decoration: underline!important;
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
- 
 
 .site-wrapper {
-    background-image: url(/wp-content/themes/juxta/images/bkg_books.gif);
-    background-position: top center; /* Center the image */
-    background-repeat: no-repeat; /* Do not repeat the image */
-    background-size:  1000px auto;
-
+  background-image: url(/wp-content/themes/juxta/images/bkg_books.gif);
+  background-position: top center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: 1000px auto;
 }
-
 
 .site-wrapper-v2 {
   display: table;
@@ -71,13 +83,9 @@ p a {text-decoration: underline!important;
   height: -webkit-calc(100vh - 1px); /* google, safari */
   height: -moz-calc(100vh - 1px); /* firefox */
 
-  box-shadow: inset 0 0 5rem rgb(72,114,133);
- 
-
+  box-shadow: inset 0 0 5rem rgb(72, 114, 133);
 }
 
-
- 
 .site-wrapper-inner {
   display: table-cell;
   vertical-align: top;
@@ -91,8 +99,6 @@ p a {text-decoration: underline!important;
 .inner {
   padding: 2rem;
 }
-
-
 
 /*
  * Cover
@@ -146,19 +152,18 @@ p a {text-decoration: underline!important;
 }
 
 blockquote {
-  color: rgba(0,0,0,.1);
+  color: rgba(0, 0, 0, 0.1);
   text-align: center;
   margin-bottom: 30px;
   & p {
-    font-size: 32px!important;
-    font-family: 'orpheuspro', garamond;
+    font-size: 32px !important;
+    font-family: "orpheuspro", garamond;
     font-weight: 400;
     font-style: normal;
     line-height: 52px;
-    margin:0 15%;
+    margin: 0 15%;
+  }
 }
-}
-
 
 .bg {
   /* The image used */
@@ -175,15 +180,523 @@ blockquote {
 }
 
 .bg-books {
-    /* The image used */
-    background-image: url("/images/books.png");
-  
-    /* Full height */
-    width: 1000px;
-  
-    /* Center and scale the image nicely */
-    background-position: top center;
-    background-repeat: no-repeat;
-   
-  }
-  
+  /* The image used */
+  background-image: url("/images/books.png");
+
+  /* Full height */
+  width: 1000px;
+
+  /* Center and scale the image nicely */
+  background-position: top center;
+  background-repeat: no-repeat;
+}
+
+/*  juxta original */
+
+/*
+Theme Name: Juxta
+Description: Child theme for Juxta
+Author: Paul Rosen, Performant Software
+Template: twentyeleven
+*/
+
+@import url("../twentyeleven/style.css");
+
+body {
+  background: url("images/bkg_gradient.gif") repeat-x scroll center top #1d0f09;
+}
+
+#main {
+  padding: 0;
+}
+
+#page {
+  background: url("images/bkg_books.gif") repeat-x scroll left top #1d0f09;
+  width: 1000px;
+  margin-top: 0;
+}
+
+.showcase.widget-area {
+  width: 200px;
+  float: right;
+  height: 0;
+}
+
+.widget_twitter ul {
+  font-size: 15px;
+  margin: 0 0 0 7px;
+  width: 221px;
+}
+
+.widget_twitter li {
+  border-bottom: 1px dashed #554a46;
+  padding: 0 2px 4px 2px;
+  margin-bottom: 6px;
+}
+
+.widget_twitter .entry-meta {
+  border: 0;
+  float: none;
+  background: none;
+}
+
+#secondary .widget_twitter .entry-content {
+  background: none;
+}
+
+#secondary .widget_twitter .time-meta a {
+  font-size: 0.85em;
+  text-align: right;
+  padding: 0 4px 0 0;
+  margin: 0;
+  color: #777;
+  font-weight: 600;
+}
+
+#secondary .widget_twitter .time-meta a:hover {
+  color: white;
+  background-color: #1d0f09;
+}
+
+#secondary .widget_twitter .entry-content a {
+  color: #777;
+  font-weight: 600;
+  display: inline;
+  padding: 0;
+  background-color: #1d0f09;
+}
+#secondary .widget_twitter .entry-content a:hover {
+  color: white;
+  background-color: #1d0f09;
+}
+
+#secondary .widget_twitter .in-reply-to-meta a {
+  font-size: 0.85em;
+  text-align: right;
+  padding: 0 4px 0 0;
+  margin: 0;
+  color: #777;
+  font-weight: 600;
+}
+#secondary .widget_twitter .in-reply-to-meta a:hover {
+  color: white;
+  background-color: #1d0f09;
+}
+
+.screenshot {
+  background: url("images/screenshot_01.jpg") no-repeat scroll center top transparent;
+  float: right;
+  margin: 0;
+  padding: 360px 0 0;
+  top: 0;
+  width: 225px;
+}
+
+.screenshot p {
+  margin-top: -82px;
+}
+
+#main #primary #content .post {
+  margin-left: 144px;
+  clear: both;
+}
+
+#secondary {
+  margin-right: 0;
+  width: 235px;
+}
+
+.singular.page .hentry {
+  padding: 0;
+  margin-left: 40px;
+}
+
+.singular #content,
+.left-sidebar.singular #content {
+  width: 750px;
+}
+
+.entry-content,
+.entry-summary {
+  padding: 0;
+}
+
+#site-generator {
+  background: url("images/bkg_footer.gif") repeat-x scroll left top #362c28;
+}
+
+#branding {
+  background: url("images/juxta_logo.jpg") no-repeat scroll left top;
+  height: 150px;
+  position: relative;
+  top: -2px;
+  left: 23px;
+}
+
+#access {
+  position: relative;
+  top: 200px;
+  background: transparent;
+  box-shadow: inherit;
+  width: 185px;
+}
+
+#access div {
+  margin: 0 45px;
+  width: 128px;
+}
+
+#branding .menu li {
+  color: #ffffff;
+  font: 16px/22px Verdana, Arial, Helvetica, sans-serif;
+  margin: 0px 0 10px;
+  padding: 0;
+  text-align: left;
+  float: inherit;
+}
+
+#branding .menu li a {
+  background: url("images/menu_bkg.png") repeat scroll left top transparent;
+  border: 1px solid #a69b95;
+  color: #ffffff;
+  font: 16px/22px Verdana, Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 5px 20px 5px 15px;
+  text-align: left;
+  text-decoration: none;
+  line-height: 1.3em;
+}
+
+#branding .menu li a:hover {
+  background: url("images/menu_bkg_hover.png") repeat scroll left top transparent !important;
+  border: 1px solid #ffffff;
+}
+
+#branding .only-search + #access div {
+  padding: 0;
+}
+
+.only-search {
+  display: none;
+}
+
+.entry-header h1.entry-title {
+  color: #ffffff;
+  font: italic 38px Georgia, "Times New Roman", Times, serif;
+  margin: 0 auto;
+  padding: 0 0 10px;
+  text-align: left;
+}
+
+.entry-header h1.entry-title a {
+  color: #ffffff;
+}
+
+.entry-header .comments-link {
+  display: none;
+}
+
+.post .entry-header h1.entry-title {
+  font-size: 24px;
+}
+
+.entry-content {
+  background: url("images/bkg_corner.gif") no-repeat scroll right bottom transparent;
+}
+
+.entry-content h3 {
+  clear: both;
+  color: #ffffff;
+  font: bold 14px/20px Verdana, Arial, Helvetica, sans-serif;
+  margin: 0 auto;
+  padding: 20px 20px 10px 25px;
+  text-align: left;
+  text-transform: inherit;
+}
+
+.entry-content p,
+.entry-content ul {
+  color: #e5ddcf;
+  font: 12px/18px Verdana, Arial, Helvetica, sans-serif;
+  margin: 0 auto;
+  padding: 0 20px 10px 25px;
+  text-align: left;
+}
+
+.entry-content a,
+.page-title a,
+#content nav a {
+  background-color: #615753;
+  color: #ffffff;
+  margin: -2px 0 -4px;
+  padding: 2px 5px 4px;
+  text-decoration: none;
+}
+
+.entry-content a:hover,
+.page-title a:hover,
+#content nav a:hover {
+  background-color: #998a84;
+}
+
+.page-header,
+#content #nav-above {
+  padding-left: 150px;
+}
+
+.page-header .page-title {
+  color: #e5ddcf;
+}
+
+.hentry {
+  border: 0;
+}
+
+#site-generator {
+  border-top: 0;
+  padding: 1em 0.5em 3em 0.5em;
+}
+
+#site-generator p {
+  color: #807873;
+  font: 11px/18px Verdana, Arial, Helvetica, sans-serif;
+  margin: 0 auto;
+  padding: 10px 0 0;
+  text-align: center;
+}
+
+#site-generator a.footer-link {
+  color: #a6a09d;
+  text-decoration: none;
+  font-weight: normal;
+}
+
+#site-generator a.footer-link:hover {
+  color: #ffffff;
+}
+
+.screenshotblock {
+  clear: both;
+  float: left;
+  margin: 0 auto;
+  padding: 15px 0 10px 25px;
+  width: 475px;
+}
+
+.screenshotblock a {
+  background: url("none") repeat scroll 0 0 transparent;
+  color: #ffffff;
+  margin: 0 auto;
+  padding: 0;
+  text-decoration: none;
+}
+
+.screenshotblock a:hover {
+  background: url("none") repeat scroll 0 0 transparent;
+}
+
+.screenshotblock img {
+  margin: 0 auto;
+  padding: 0;
+  border: 0;
+}
+
+.screenshotblock p {
+  color: #e5ddcf;
+  float: right;
+  font: 12px/18px Verdana, Arial, Helvetica, sans-serif;
+  margin: 0 auto;
+  padding: 0 10px 10px 0;
+  text-align: left;
+  width: 280px;
+}
+
+.screenshotblock p a {
+  background: url("none") repeat scroll 0 0 transparent;
+  color: #ffffff;
+  margin: 0;
+  padding: 3px 10px 5px 4px;
+  text-decoration: none;
+}
+
+.downloadblock {
+  margin: 0 auto;
+  padding: 15px 0 10px 25px;
+  text-align: center;
+  width: 475px;
+}
+
+.downloadblock p {
+  color: #e5ddcf;
+  display: inline;
+  float: left;
+  font: 12px/30px Verdana, Arial, Helvetica, sans-serif;
+  margin: 0 auto;
+  padding: 0 20px;
+  text-align: center;
+}
+
+.downloadblock p a {
+  background: url("none") repeat scroll 0 0 transparent;
+  color: #ffffff;
+  display: block;
+  margin: 0;
+  padding: 15px 20px 5px;
+  text-decoration: none;
+}
+
+.downloadblock img {
+  margin: 0 auto;
+  padding: 0;
+}
+
+.singular .page footer.entry-meta {
+  display: none;
+}
+
+.singular footer.entry-meta {
+  margin-bottom: 16px;
+  margin-top: 8px;
+  margin-left: 20px;
+  width: 475px;
+}
+
+.entry-meta {
+  border-top: 1px solid #615753;
+  float: left;
+  margin: 2px 0 25px 25px;
+  padding: 3px 0 3px 30px !important;
+  width: 475px;
+  color: #e5ddcf;
+  background: url("images/icon_comment.gif") no-repeat scroll left center #3a3331;
+  font: 11px/18px Verdana, Arial, Helvetica, sans-serif;
+}
+
+.entry-meta a {
+  color: #e5ddcf;
+  font: 11px/18px Verdana, Arial, Helvetica, sans-serif;
+  margin: 0 auto;
+  padding: 5px;
+  text-decoration: underline;
+}
+
+.entry-meta a:hover {
+  color: #ffffff;
+  background-color: #998a84;
+}
+
+#secondary h3 {
+  background-color: #362c28;
+  border-top: 1px solid #615753;
+  color: #ffffff;
+  font: 12px/18px Verdana, Arial, Helvetica, sans-serif;
+  margin: 10px 5px 0;
+  padding: 5px 0 5px 10px;
+  text-align: left;
+}
+
+#secondary a,
+.screenshot a {
+  color: #ffffff;
+  display: block;
+  font: 12px/18px Verdana, Arial, Helvetica, sans-serif;
+  margin: 0 auto;
+  padding: 5px 0 5px 10px;
+  text-align: left;
+  text-decoration: none;
+}
+
+#secondary a:hover,
+.widget-recent-entries li a,
+.screenshot a:hover {
+  color: #ffffff;
+  background-color: #362c28;
+}
+
+.rss {
+  background: url("images/rss-feed-icon-14x14.png") no-repeat 0 7px;
+  padding-left: 22px !important;
+}
+
+.twitter {
+  background: url("images/twitter.png") no-repeat 0 7px;
+  padding-left: 22px !important;
+}
+
+.facebook {
+  background: url("images/facebook.png") no-repeat 0 7px;
+  padding-left: 22px !important;
+}
+
+.mail {
+  background: url("images/icon_mail.gif") no-repeat 0 7px;
+  padding-left: 22px !important;
+}
+
+.widget_recent_entries ul {
+  list-style: none;
+}
+
+#secondary .widget_recent_entries li a {
+  background: url("images/icon_post.gif") no-repeat scroll left center transparent;
+  border-bottom: 1px dashed #554a46;
+  color: #e5ddcf;
+  display: block;
+  font: 12px/18px Verdana, Arial, Helvetica, sans-serif;
+  margin: 0 5px;
+  padding: 8px 0 8px 20px;
+  text-align: left;
+  text-decoration: none;
+  padding-left: 17px;
+  margin-left: 6px;
+  margin-right: 24px;
+}
+
+#nav-below {
+  float: left;
+  width: 500px;
+  color: #736f68;
+  float: left;
+  font: 12px/18px Verdana, Arial, Helvetica, sans-serif;
+  margin-left: 150px;
+  padding: 0 20px 10px 25px;
+  text-align: left;
+}
+
+#nav-below a {
+  color: #ffffff;
+  margin: -2px 0 -4px;
+  padding: 2px 5px 4px;
+  text-decoration: none;
+  font-weight: normal;
+}
+
+#nav-below a:hover {
+  background-color: #998a84;
+}
+
+#comments {
+  display: none;
+}
+
+.wp-caption {
+  background: inherit;
+  margin-bottom: 0;
+}
+
+.entry-content .wp-caption a {
+  background-color: inherit;
+  padding: 0;
+}
+
+img[class*="align"],
+img[class*="wp-image-"],
+#content .gallery .gallery-icon img {
+  border: none;
+  padding: 0px;
+}
+
+.entry-content .wp-caption .wp-caption-text,
+.gallery-caption {
+  color: #e5ddcf !important;
+}
