--- a/_includes/left-column.html
+++ b/_includes/left-column.html
@@ -1,17 +1,19 @@
 <!-- ========== LEFT COLUMN ========== -->
-<div class="menu">
-    <ul>
-        <li class="current_page_item"><a href="http://juxtasoftware.org/">Home</a></li>
-        <li class="page_item page-item-289"><a href="http://juxtasoftware.org/juxta-commons/">Juxta Commons</a></li>
-        <li class="page_item page-item-156"><a href="http://juxtasoftware.org/screenshots/">Screenshots</a></li>
-        <li class="page_item page-item-158"><a href="http://juxtasoftware.org/download/">Download</a></li>
-        <li class="page_item page-item-160"><a href="http://juxtasoftware.org/about/">About</a></li>
-    </ul>
-</div>
-<div class="menu">
-    <ul>
-        <li class="page_item page-item-8"><a target="_blank"
-                href="https://github.com/performant-software/juxta-desktop/wiki/UserManual">User Manual</a></li>
-    </ul>
-</div>
+<nav id="access" role="navigation">
+    <div class="menu">
+        <ul>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/juxta-commons/">Juxta Commons</a></li>
+            <li><a href="/screenshots/">Screenshots</a></li>
+            <li><a href="/download/">Download</a></li>
+            <li><a href="/about/">About</a></li>
+            <li><a target="_blank" href="https://github.com/performant-software/juxta-desktop/wiki/UserManual">User Manual</a></li>
+        </ul>
+    </div>
+    <div class="menu">
+        <ul>
+            
+        </ul>
+    </div>
+</nav>
 <!-- ========== END LEFT COLUMN========== -->
