--- a/_includes/right-column.html
+++ b/_includes/right-column.html
@@ -1,18 +1,17 @@
 <!-- ========== RIGHT - COLUMN ========== -->
-<div class="col-sm-2">
+<div id="secondary" class="widget-area col" role="complementary">
+        <aside id="recent-posts-2" class="widget widget_recent_entries">
+            <h3 class="widget-title">Recent Posts</h3>
+             
+            <ul>
+                {% for post in site.posts limit:10 %}
+                <li>
+                    <a href="{{ site.baseurl }}{{ post.url }}" title="{{ post.title }}"
+                        rel="bookmark">{{ post.title }}</a>
+                </li>
+                {% endfor %}
+            </ul>
 
-
-
-    <h4>{{ site.locales[site.default_locale].Recent_Posts }}</h4>
-    {% for post in site.posts limit:5 %}
-    <li>
-        <a href="{{ site.baseurl }}{{ post.url }}" title="{{ post.title }}" rel="bookmark">{{ post.title }}</a>
-    </li>
-    {% endfor %}
-
-
-
-</div>
-
-
+        </aside>
+    </div>
 <!-- ========== END RIGHT - COLUMN ========== -->
