--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,24 +22,7 @@
 								{{ content }}
 							</main>
 						</div>
-						<div id="secondary" class="widget-area col" role="complementary">
-							<aside id="recent-posts-2" class="widget widget_recent_entries">
-								<h3 class="widget-title">Recent Posts</h3>
-								<ul>
-									{% for post in site.posts %}
-
-									<li>
-										<a href="{{ post.url }}">
-											{{ post.title }}
-										</a>
-									</li>
-
-
-
-									{% endfor %}
-								</ul>
-							</aside>
-						</div>
+						{% include right-column.html %}
 					</div>
 
 				</div>
